--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./style.css"> 
+
     <title>Portafolio Web</title>
   </head>
   <body>
-    <h1> aalaverga </h1>
-    <h2>asdasd</h2>
-    <h3>tumami<h3>
+    <!--Sobre mi-->
+    <section class="section1">
+      <h1>Perfil</h1>
+      <div class="cajas1">
+        caja 1
+      </div>
+      <div class="cajas1">
+        caja 2
+      </div>
+      <div class="cajas1">
+        caja 3
+      </div>
+    </section>
+
   </body>
 </html>
